# netatmo2ros

./: CMakeLists.txt  Dockerfile  LICENSE  README  package.xml  ros_entrypoint.sh
msg/: Weatherdata.msg  WeatherdataArray.msg
src/: config.ini.dist  main.py
