<?xml version="1.0"?>
<package format="2">
  <name>netatmo2ros</name>
  <version>0.1.0</version>
  <description>Translate data from Netatmo weatherstation to ROS</description>

  <maintainer email="jariza@ieee.org">José Jaime Ariza</maintainer>
  <license>MIT</license>
  <author email="jariza@ieee.org">José Jaime Ariza</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
